@@ -4,57 +4,62 @@ import ch.fortylove.SpringTest;
 import ch.fortylove.persistence.entity.Privilege;
 import ch.fortylove.persistence.entity.Role;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.Arrays;
+import javax.annotation.Nonnull;
+import java.util.List;
 import java.util.Optional;
 
 @SpringTest
-class TestRoleServiceImpl {
-
-    @Autowired private PrivilegeService privilegeService;
+class TestRoleServiceImpl extends ServiceTest {
 
     @Autowired private RoleService testee;
+
+    @Nonnull private Privilege privilege;
+
+    @Autowired
+    public TestRoleServiceImpl(@Nonnull final RoleService testee) {
+        this.testee = testee;
+    }
+
+    @BeforeEach
+    void setUp() {
+        privilege = getTestDataFactory().getPrivilegeDataFactory().getDefault();
+    }
 
     @Test
     public void testCreate() {
         final String roleName = "roleName";
-        final Privilege privilege1 = privilegeService.create(new Privilege(0L, "privilegeName1", null));
-        final Privilege privilege2 = privilegeService.create(new Privilege(0L, "privilegeName2", null));
 
-        final Role createdRole = testee.create(new Role(0L, roleName, null, Arrays.asList(privilege1, privilege2)));
+        final Role createdRole = testee.create(new Role(roleName, List.of(privilege)));
 
-        Assertions.assertTrue(testee.findByName(roleName).isPresent());
-        Assertions.assertEquals(createdRole, testee.findByName(roleName).get());
-        Assertions.assertTrue(createdRole.getPrivileges().contains(privilege1));
-        Assertions.assertTrue(createdRole.getPrivileges().contains(privilege2));
+        final Optional<Role> foundRole = testee.findByName(roleName);
+        Assertions.assertTrue(foundRole.isPresent());
+        Assertions.assertEquals(createdRole, foundRole.get());
     }
 
     @Test
     public void testFindByName_notExists() {
-        final Privilege privilege1 = privilegeService.create(new Privilege(0L, "privilegeName1", null));
-        final Privilege privilege2 = privilegeService.create(new Privilege(0L, "privilegeName2", null));
-        testee.create(new Role(0L, "roleName1", null, Arrays.asList(privilege1, privilege2)));
-        testee.create(new Role(0L, "roleName3", null, Arrays.asList(privilege1, privilege2)));
+        testee.create(new Role("roleName1", List.of(privilege)));
+        testee.create(new Role("roleName3", List.of(privilege)));
 
-        final Optional<Role> role = testee.findByName("roleName2");
+        final Optional<Role> foundRole = testee.findByName("roleName2");
 
-        Assertions.assertTrue(role.isEmpty());
+        Assertions.assertTrue(foundRole.isEmpty());
     }
 
     @Test
     public void testFindByName_exists() {
         final String roleName2 = "roleName2";
-        final Privilege privilege1 = privilegeService.create(new Privilege(0L, "privilegeName1", null));
-        final Privilege privilege2 = privilegeService.create(new Privilege(0L, "privilegeName2", null));
-        testee.create(new Role(0L, "roleName1", null, Arrays.asList(privilege1, privilege2)));
-        final Role role2 = testee.create(new Role(0L, roleName2, null, Arrays.asList(privilege1, privilege2)));
-        testee.create(new Role(0L, "roleName3", null, Arrays.asList(privilege1, privilege2)));
+        testee.create(new Role("roleName1", List.of(privilege)));
+        final Role createdRole = testee.create(new Role(roleName2, List.of(privilege)));
+        testee.create(new Role("roleName3", List.of(privilege)));
 
-        final Optional<Role> role = testee.findByName(roleName2);
+        final Optional<Role> foundRole = testee.findByName(roleName2);
 
-        Assertions.assertTrue(role.isPresent());
-        Assertions.assertEquals(role2, role.get());
+        Assertions.assertTrue(foundRole.isPresent());
+        Assertions.assertEquals(createdRole, foundRole.get());
     }
 }
